--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.23.1",
+    "react-speech-recognition": "^3.10.0",
     "react-webcam": "^7.2.0",
     "remove.bg": "^1.3.0",
     "sass": "^1.63.6",
